[gd_scene load_steps=6 format=3 uid="uid://c6eb3xgrqgvie"]

[ext_resource type="Script" uid="uid://cwd8yi0wa0cbo" path="res://scripts/buildings/path/Path.gd" id="1_sqppf"]
[ext_resource type="Texture2D" uid="uid://tlg8wkvk43lg" path="res://assets/ground/path.png" id="2_7p83t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sqppf"]
size = Vector2(30, 30)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_sqppf"]
vertices = PackedVector2Array(8, -8, 16, -8, 16, 8, 8, 8, 8, 16, -8, 16, -8, 8, -8, -8, -16, 8, -16, -8, 8, -16, -8, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(3, 4, 5, 6), PackedInt32Array(0, 3, 6, 7), PackedInt32Array(6, 8, 9, 7), PackedInt32Array(10, 0, 7, 11)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, -8, -16, 8, -16, 8, -8, 16, -8, 16, 8, 8, 8, 8, 16, -8, 16, -8, 8, -16, 8, -16, -8)])
agent_radius = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1dods"]
size = Vector2(18, 20)

[node name="Path" type="Area2D"]
script = ExtResource("1_sqppf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sqppf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7p83t")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_sqppf")
navigation_layers = 2

[node name="LinkCollisions" type="Node2D" parent="."]

[node name="Left" type="Area2D" parent="LinkCollisions"]
position = Vector2(-16, 0)
scale = Vector2(0.399999, 0.36)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LinkCollisions/Left"]
position = Vector2(-10, 0)
shape = SubResource("RectangleShape2D_1dods")
debug_color = Color(0.69887, 0.470185, 0.410463, 0.42)

[node name="Haut" type="Area2D" parent="LinkCollisions"]
position = Vector2(0, -16)
scale = Vector2(0.399999, 0.36)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LinkCollisions/Haut"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_1dods")
debug_color = Color(0.69887, 0.470185, 0.410463, 0.42)

[node name="Droite" type="Area2D" parent="LinkCollisions"]
position = Vector2(16, 0)
scale = Vector2(0.399999, 0.36)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LinkCollisions/Droite"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_1dods")
debug_color = Color(0.69887, 0.470185, 0.410463, 0.42)

[node name="Bas" type="Area2D" parent="LinkCollisions"]
position = Vector2(0, 16)
scale = Vector2(0.399999, 0.36)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LinkCollisions/Bas"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_1dods")
debug_color = Color(0.69887, 0.470185, 0.410463, 0.42)

[connection signal="area_entered" from="LinkCollisions/Left" to="." method="_on_left_area_entered"]
[connection signal="area_entered" from="LinkCollisions/Haut" to="." method="_on_haut_area_entered"]
[connection signal="area_entered" from="LinkCollisions/Droite" to="." method="_on_droite_area_entered"]
[connection signal="area_entered" from="LinkCollisions/Bas" to="." method="_on_bas_area_entered"]
